syntax = "proto3";
package comdex.lend.v1beta1;


import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/lend/v1beta1/lend.proto";
import "comdex/lend/v1beta1/params.proto";

option go_package = "github.com/comdex-official/comdex/x/lend/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryLendsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryLendsResponse {
  repeated LendAsset lends = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"lends\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryLendRequest {
  uint64 id = 1;
}

message QueryLendResponse {
  LendAsset lend = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"lend\""];
}

message QueryAllLendByOwnerRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllLendByOwnerResponse {
  repeated LendAsset lends = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"lend_ids\""];
}

message QueryAllLendByOwnerAndPoolRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllLendByOwnerAndPoolResponse {
  repeated LendAsset lends = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"lends\""];
}
message QueryPairsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPairsResponse {
  repeated Extended_Pair extendedPairs = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"extended_pairs\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPairRequest {
  uint64 id = 1;
}

message QueryPairResponse {
  Extended_Pair ExtendedPair = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"extended_pair\""];
}

message QueryAssetRatesStatsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetRatesStatsResponse {
  repeated AssetRatesStats AssetRatesStats = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_rates_stats\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetRatesStatRequest {
  uint64 id = 1;
}

message QueryAssetRatesStatResponse {
  AssetRatesStats AssetRatesStat = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"asset_rates_stat\""];
}

message QueryPoolsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPoolsResponse {
  repeated Pool pools = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"pools\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPoolRequest {
  uint64 id = 1;
}

message QueryPoolResponse {
  Pool pool = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"pool\""];
}

message QueryAssetToPairMappingsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetToPairMappingsResponse {
  repeated AssetToPairMapping assetToPairMappings = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_to_pair_mappings\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetToPairMappingRequest {
  uint64 asset_id = 1 [(gogoproto.moretags) = "yaml:\"asset_id\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
}

message QueryAssetToPairMappingResponse {
  AssetToPairMapping AssetToPairMapping = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"asset_to_pair_mapping\""];
}

message QueryBorrowsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryBorrowsResponse {
  repeated BorrowAsset borrows = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"borrows\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryBorrowRequest {
  uint64 id = 1;
}

message QueryBorrowResponse {
  BorrowAsset borrow = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"borrow\""];
}

message QueryAllBorrowByOwnerRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllBorrowByOwnerResponse {
  repeated BorrowAsset borrows = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"borrows\""];
}

message QueryAllBorrowByOwnerAndPoolRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllBorrowByOwnerAndPoolResponse {
  repeated BorrowAsset borrows = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"borrows\""];
}

message QueryAssetStatsRequest {
  uint64 asset_id = 1 [(gogoproto.moretags) = "yaml:\"asset_id\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetStatsResponse {
  AssetStats AssetStats = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_stats\""];
}

message QueryModuleBalanceRequest {
  uint64 pool_id = 1 [(gogoproto.moretags) = "yaml:\"pool_id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryModuleBalanceResponse {
  ModuleBalance ModuleBalance = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"module_balance\""];
}
service Query {
  rpc QueryLends(QueryLendsRequest) returns (QueryLendsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/lends";
  }
  rpc QueryLend(QueryLendRequest) returns (QueryLendResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/lends/{id}";
  }

  rpc QueryAllLendByOwner(QueryAllLendByOwnerRequest) returns (QueryAllLendByOwnerResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/lends_by_owner/{owner}";
  };

  rpc QueryAllLendByOwnerAndPool(QueryAllLendByOwnerAndPoolRequest) returns (QueryAllLendByOwnerAndPoolResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/lends_by_owner_pool/{owner}/{pool_id}";
  };

  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/params";
  }

  rpc QueryPairs(QueryPairsRequest) returns (QueryPairsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/pairs";
  }
  rpc QueryPair(QueryPairRequest) returns (QueryPairResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/pairs/{id}";
  }

  rpc QueryAssetRatesStats(QueryAssetRatesStatsRequest) returns (QueryAssetRatesStatsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/asset_rates_stats";
  }
  rpc QueryAssetRatesStat(QueryAssetRatesStatRequest) returns (QueryAssetRatesStatResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/asset_rates_stats/{id}";
  }

  rpc QueryPools(QueryPoolsRequest) returns (QueryPoolsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/pools";
  }
  rpc QueryPool(QueryPoolRequest) returns (QueryPoolResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/pools/{id}";
  }

  rpc QueryAssetToPairMappings(QueryAssetToPairMappingsRequest) returns (QueryAssetToPairMappingsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/asset_to_pair_mappings";
  }
  rpc QueryAssetToPairMapping(QueryAssetToPairMappingRequest) returns (QueryAssetToPairMappingResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/asset_to_pair_mappings/{asset_id}/{pool_id}";
  }

  rpc QueryBorrows(QueryBorrowsRequest) returns (QueryBorrowsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/borrows";
  }
  rpc QueryBorrow(QueryBorrowRequest) returns (QueryBorrowResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/borrows/{id}";
  }

  rpc QueryAllBorrowByOwner(QueryAllBorrowByOwnerRequest) returns (QueryAllBorrowByOwnerResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/borrows_by_owner/{owner}";
  }

  rpc QueryAllBorrowByOwnerAndPool(QueryAllBorrowByOwnerAndPoolRequest) returns (QueryAllBorrowByOwnerAndPoolResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/borrows_by_owner_pool/{owner}/{pool_id}";
  }

  rpc QueryAssetStats(QueryAssetStatsRequest) returns (QueryAssetStatsResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/asset_stats/{asset_id}/{pool_id}";
  };

  rpc QueryModuleBalance(QueryModuleBalanceRequest) returns (QueryModuleBalanceResponse) {
    option (google.api.http).get = "/comdex/lend/v1beta1/module_balance/{pool_id}";
  };
}

